--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,18 +67,6 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
 
-    // Room
-    implementation "androidx.room:room-runtime:2.4.3"
-    kapt "androidx.room:room-compiler:2.4.3"
-
-    // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-
-    // OkHTTP
-    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
-    implementation "com.squareup.okhttp3:okhttp:4.10.0"
-
     // Dependency Injection
     implementation "com.google.dagger:hilt-android:2.44"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
@@ -89,5 +77,5 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     // Coil
-    implementation "io.coil-kt:coil:2.4.0"
+    implementation "io.coil-kt:coil-compose:2.0.0"
 }
